# mpt-visualizer

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: test.yml
backend/: Cargo.toml
backend/src/: main.rs  mpt.rs  rlp.rs  rpc.rs  tx.rs
backend/tests/: verify_real_blocks.rs
src/: styles.css
src/core/: mpt.js  nodes.js  script.js  stats.js  utils.js
src/engine/: keccak.js  mpt.js  rlp.js
src/ui/: App.js  EthereumService.js  MPTVisualizer.js  examples.js  recentBlocks.js
src/visualization/: BranchVisual.js  ConnectionManager.js  ExtensionVisual.js  LayoutEngine.js  LeafVisual.js  RadialLayout.js  Renderer.js  VisualNode.js  config.js
tests/: ethereum.test.js  fixtures.json  keccak.test.js  layout.test.js  mpt-engine.test.js  mpt.test.js  rlp.test.js  stats.test.js  trie_spec.py
tools/: gen_tests.py
