[package]
name = "mpt-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny-keccak = { version = "2", features = ["keccak"] }
hex = "0.4"
anyhow = "1"
thiserror = "1"

[profile.release]
opt-level = 3
lto = "thin"
